--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,7 +1,7 @@
 <resources>
 
 
-    <string name="app_name">BlogApp</string>
+    <string name="app_name">Cerpen</string>
     <string name="title_activity_home">Home</string>
 
     <!-- TODO: Remove or change this placeholder text -->
